--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vuedaru",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/simoneb/vuedaru",
   "scripts": {
     "serve": "vue-cli-service serve --port 3000",
     "build": "vue-cli-service build",
