use published vuex-function-actions

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue": "^2.5.16",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-function-actions": "0.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0",
